--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0"
+  },
+  "engines": {
+    "node": ">=19 <8"
   }
 }
