--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-handlebars": "^7.1.0"
+    "express": "4.18.2",
+    "express-handlebars": "7.1.0"
   },
   "engines": {
     "node": ">=20"
