--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
@@ -12,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.18.2",
-    "express-handlebars": "7.1.0"
+    "express-handlebars": "7.1.0",
+    "node-cron": "3.0.2"
   },
   "engines": {
     "node": ">=20"
